--- a/index.html
+++ b/index.html
@@ -16,16 +16,18 @@
                 <nav class="nav-bar">
                     <img class="nav-bar-image" src="./images/27.png" alt="">
                     <ul>
-                        <li><a href="./">Home</a></li>
-                        <li><a href="./">TV Shows</a></li>
-                        <li><a href="./">Movies</a></li>
-                        <li><a href="./">Recently Added</a></li>
-                        <li><a href="./">My list</a></li>
+                        <li><a class="nav-bar-links" href="./">Home</a></li>
+                        <li><a class="nav-bar-links" href="./">TV Shows</a></li>
+                        <li><a class="nav-bar-links" href="./">Movies</a></li>
+                        <li><a class="nav-bar-links" href="./">Recently Added</a></li>
+                        <li><a class="nav-bar-links" href="index.html">My list</a></li>
                     </ul>
-                    <form class="form" action="action_page.php">
-                        <input class="search-form" type="text" placeholder="Search.." name="search">
-                        <button type="submit"><i data-feather="search"></i></button>
-                    </form>
+                    <div class="form-wrapper">
+                        <form class="form" action="action_page.php">
+                            <input class="search-form" type="text" placeholder="Search.." name="search">
+                             <button type="submit"><i data-feather="search"></i></button> 
+                        </form>
+                    </div>
                 </nav>
             </div>
         </div>
@@ -38,20 +40,13 @@
             <p>Three years after billionaire philanthropist Bruce Wayne and his vigilante alter-ego, Batman disappeared,
                 his cousin Kate Kane sets out to overcome her demons and become a symbol of hope by protecting the
                 streets of Gotham City as Batwoman from criminals like the Wonderland Gang led by Kate's thought dead
-                sister Alice</p>
-        </div>
-        <div class="originals">
-            <!-- <img class="lucifer" src="./images/6.jpg" alt="img">
-            <img src="./images/7.jpg" alt="img">
-            <img src="./images/9.jpg" alt="img"> -->
-            <img class="love" src="./images/25.png" alt="">
-            <img class="equinox" src="./images/22.jpg" alt="">
-
+                sister Alice.</p>
         </div>
 
-    <script>
-        feather.replace()
-    </script>
+
+        <script>
+            feather.replace()
+        </script>
 </body>
 
 </html>
