new styling added

--- a/index.html
+++ b/index.html
@@ -4064,7 +4064,7 @@
             <div class="footer-content">
                 <h4>Gift Cards</h4>
                 <h4>Term of Use</h4>
-                <h4>Corporate Information</h4>
+                <h4>Corporate Information.</h4>
             </div>
         </div>
     </footer>
