added new styles to sign-in.css

--- a/main.html
+++ b/main.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="styles/main.css">
 </head>
 <body>
-    <section>
+    <!-- <section>
         <div class="card">
             <img src="https://images.pexels.com/photos/3881104/pexels-photo-3881104.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500" alt="">
             <div class="card-footer">
@@ -86,6 +86,10 @@
             <li>bread</li>
             <li>cake</li>
         </ul>
-    </nav>
+    </nav> -->
+
+    <section>
+        <div class="container"></div>
+    </section>
 </body>
 </html>
