--- a/sign-in.html
+++ b/sign-in.html
@@ -21,7 +21,7 @@
                 <h1 class="form-heading">Sign in</h1>
                 <div class="form-content">
                     <label class for="email"></label>
-                    <input class="input" type="email" id="email" pattern=".+@globex.com" size="30"
+                    <input class="input" type="email" id="email" size="30"
                         placeholder="Email or Phone number" required>
                 </div>
                 <div class="">
@@ -36,12 +36,13 @@
                     <label class for="Remember Me">Remember Me</label>
                     <h4>Need Help?</h4>
                 </div>
-                <div class="form-icon-wrapper">
-                    <a href="./"><i class="facebook-icon" data-feather="facebook"></i>Log in with facebook</a>
-                </div>
+                <a href="./" class="form-icon-wrapper">
+                    <i class="facebook-icon" data-feather="facebook"></i>
+                    <p class="log-facebook">Log in with facebook</p>
+                </a>
                 <div class="user-info">
                     <h4>New to Netflix?</h4>
-                    <a href="./">Sign in Now.</a>
+                    <a href="/">Sign up now.</a>
                 </div>
                 <div class="form-bottom">
                     <p>This page is protected by Google reCAPTCHA to <br> ensure you're not bot. <a href="./">Learn
@@ -49,9 +50,33 @@
                 </div>
         </div>
         </form>
+        <footer class="footer">
+            <div class="contacts">
+                <a class="link" href="">Questions?</a>
+                <a class="link" href="">ContactUs.</a>
+            </div>
+            <div class="footer-container">
+               <div class="content">
+                   <a class="link" href="">FAQ</a>
+                   <a class="link" href="">Cookie prefference</a>
+               </div>
+               <div class="content">
+                   <a class="link" href="">Help center</a>
+                    <a class="link" href="">cooperate information</a>
+               </div>
+               <div class="content">
+                   <a class="link" href="">Term of use</a>
+               </div>
+               <div class="content">
+                   <a class="link" href="">Privacy</a>  
+               </div>
+            </div>
+            <divn class="footer-button">
+                <button class="footer-btn" ><i class="footer-icon" data-feather="globe"></i>English<i class="footer-icon" data-feather="chevron-down"></i></button>
+            </div> 
+        </footer>
     </div>
 
-    </div>
     <script>
         feather.replace()
     </script>
