finished hero-section

--- a/sign-in.html
+++ b/sign-in.html
@@ -42,7 +42,7 @@
                 </a>
                 <div class="user-info">
                     <h4>New to Netflix?</h4>
-                    <a href="/">Sign up now.</a>
+                    <a href="sign-up.html">Sign up now.</a>
                 </div>
                 <div class="form-bottom">
                     <p>This page is protected by Google reCAPTCHA to <br> ensure you're not bot. <a href="./">Learn
