--- a/sign-up.html
+++ b/sign-up.html
@@ -26,12 +26,178 @@
                         <label class for="email"></label>
                         <input class="text-field" type="email" id="email" size="30" placeholder="Email address"
                             required>
-                        <button class="form-btn" type="submit"><span class="button-text">GET STARTED</span><iclass="footer-icon" data-feather="chevron-right"></i></button>
+                        <button class="form-btn" type="submit"><span class="button-text">GET STARTED</span><i
+                                class="footer-icon" data-feather="chevron-right"></i></button>
                     </div>
                 </form>
             </div>
         </div>
     </section>
+    <section class="story-cards">
+        <div class="story-card-wrapper">
+            <div class="story-card">
+                <div class="story-card-text">
+                    <h1 class="story-text enjoy">Enjoy on your TV.</h1>
+                    <h2 class="story-text">Watch on Smart TVs, Playstation, Xbox,</h2>
+                    <h2 class="story-text">Chromecast, Apple TV, Blu-ray players, and</h2>
+                    <h2 class="story-text">more.</h2>
+                </div>
+                <img class="story-img" src="./images/tv (2).png" alt="img">
+            </div>
+        </div>
+
+    </section>
+    <section class="story-cards">
+        <div class="story-card">
+            <img class="story-img" src="./images/mobile-0819.jpg" alt="img">
+            <div class="story-card-text">
+                <h1 class="story-text enjoy">Download your shows</h1>
+                <h2 class="story-text enjoy">to watch offline.</h2>
+                <h2 class="story-text">Save your favorites easily and always have</h2>
+                <h2 class="story-text">something to watch</h2>
+            </div>
+        </div>
+    </section>
+    <section class="story-cards">
+        <div class="story-card-wrapper">
+            <div class="story-card">
+                <div class="story-card-text">
+                    <h1 class="story-text enjoy">Watch Everywhere</h1>
+                    <h2 class="story-text">Stream unlimited movies and TV shows on</h2>
+                    <h2 class="story-text">your phone, tablet, laptop, and TV without</h2>
+                    <h2 class="story-text">Paying more.</h2>
+                </div>
+                <img class="story-img" src="./images/device-pile (1).png" alt="img">
+            </div>
+        </div>
+    </section>
+    <section class="questions">
+        <div class="questions-header"><h1>Frequently Asked Questions</h1></div>
+        <div class="questions-wrapper">
+            <div class="questions-card">
+                <ul>
+                    <li>
+                        <button class="sign-up-button">What is Netflix <i class="sign-up-icon"
+                                data-feather="plus"></i></button>
+                        <!-- <div class="netflix-explained">
+                            <span>Netflix is a streaming service that offers a wide variety of award-winning TV shows,
+                                movies, animmations, documentaries, and more on thousands of internet-connected
+                                devices.<br> <br>
+
+
+
+                                You can watch as much as you want,whenever you want without a single commercial –
+                                all for one low monthly price. There's always something new to discover and new TV
+                                shows<br> and movies are added every week!</span>
+                        </div> -->
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div class="questions-wrapper">
+            <div class="questions-card">
+                <ul>
+                    <li>
+                        <button class="sign-up-button">How much does Netflix Cost ? <i class="sign-up-icon"
+                                data-feather="plus"></i></button>
+                        <div class="netflix-explained">
+                            <span>Watch Netflix on your smartphone, tablet, Smart TV, laptop, or streaming device, all
+                                for one fixed monthly fee. Plans range from Ksh 700 to Ksh 1,200 a month. No extra
+                                costs, no contracts.</span>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div class="questions-wrapper">
+            <div class="questions-card">
+                <ul>
+                    <li>
+                        <button class="sign-up-button">Where Can I Watch?<i class="sign-up-icon"
+                                data-feather="plus"></i></button>
+                        <!-- <div class="netflix-explained">
+                            <span>Watch anywhere, anytime, on an unlimited number of devices. Sign in with your Netflix
+                                account to watch instantly on the web at netflix.com from your personal computer or on
+                                any internet-connected device that offers the Netflix app, including smart TVs,
+                                smartphones, tablets, streaming media players and game consoles.
+
+                                You can also download your favorite shows with the iOS, Android, or Windows 10 app. Use
+                                downloads to watch while you're on the go and without an internet connection. Take
+                                Netflix with you anywhere.
+                            </span>
+                        </div> -->
+                    </li>
+                </ul>
+            </div>
+
+        </div>
+        <div class="questions-wrapper">
+            <div class="questions-card">
+                <ul>
+                    <li>
+                        <button class="sign-up-button">How do i cancel?<i class="sign-up-icon"
+                                data-feather="plus"></i></button>
+                        <!-- <div class="netflix-explained">
+                            <span>Netflix is flexible. There are no pesky contracts and no commitments. You can easily
+                                cancel your account online in two clicks. There are no cancellation fees – start or stop
+                                your account anytime.</span>
+                        </div> -->
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div class="questions-wrapper">
+            <div class="questions-card">
+                <ul>
+                    <li>
+                        <button class="sign-up-button mb-30">What Can I Watch on Netflix ?<i class="sign-up-icon"
+                                data-feather="plus"></i></button>
+                        <!-- <div class="netflix-explained">
+                            <span>Netflix has an extensive library of feature films, documentaries, TV shows, anime,
+                                award-winning Netflix originals, and more. Watch as much as you want, anytime you
+                                want.</span>
+                        </div> -->
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div class="sign-up-input">
+            <h3 class="form-title">Ready to watch? Enter your email to create or restart your membership.</h3>
+            <form action="GET">
+                <div class="input-area">
+                    <label class for="email"></label>
+                    <input class="text-field" type="email" id="email" size="30" placeholder="Email address" required>
+                    <button class="form-btn" type="submit"><span class="button-text">GET STARTED</span><i
+                            class="footer-icon" data-feather="chevron-right"></i></button>
+                </div>
+            </form>
+        </div>
+    </section>
+        <footer class="footer-sign-up">
+            <div class="contacts">
+                <a class="link" href="">Questions?</a>
+                <a class="link" href="">ContactUs.</a>
+            </div>
+            <div class="footer-container">
+               <div class="content">
+                   <a class="link" href="">FAQ</a>
+                   <a class="link" href="">Cookie prefference</a>
+               </div>
+               <div class="content">
+                   <a class="link" href="">Help center</a>
+                    <a class="link" href="">cooperate information</a>
+               </div>
+               <div class="content">
+                   <a class="link" href="">Term of use</a>
+               </div>
+               <div class="content">
+                   <a class="link" href="">Privacy</a>  
+               </div>
+            </div>
+            <divn class="footer-button">
+                <button class="footer-btn" ><i class="footer-icon" data-feather="globe"></i>English<i class="footer-icon" data-feather="chevron-down"></i></button>
+            </div> 
+        </footer>
     <script>
         feather.replace()
     </script>
