added a new file, fixed alignment issues and arranged codebase

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="hero-image">
             <div class="nav-wrapper">
                 <nav class="nav-bar">
-                    <img class="nav-img" src="./images/27.png" alt="img">
+                   <a href="./"><img class="nav-img" src="./images/27.png" alt="img"></a>           
                     <div class="brands">
                         <ul>
                             <li>Home</li>
@@ -3522,7 +3522,8 @@
                 <h4>Media Center</h4>
                 <h4>Privacy</h4>
                 <h4>Contact Us</h4>
-                <button class="footer-btn">Service code</button>
+                <button class="service-btn">Service code</button>
+                
             </div>
             <div class="footer-content">
                 <h4>Audio Description</h4>
@@ -3541,9 +3542,9 @@
             </div>
         </div>
     </footer>
-    <div class="copyright">
+     <div class="copyright">
         <p>&copy; 1997-2021 Netflix,Inc.{i-OOeb84c365efb}</p>
-    </div>
+    </div> 
     <script>
         feather.replace()
     </script>
