--- a/sign-up.html
+++ b/sign-up.html
@@ -27,7 +27,7 @@
                         <input class="text-field" type="email" id="email" size="30" placeholder="Email address"
                             required>
                         <button class="form-btn" type="submit"><span class="button-text">GET STARTED</span><i
-                                class="footer-icon" data-feather="chevron-right"></i></button>
+                                class="footer-icon chevvy" data-feather="chevron-right"></i></button>
                     </div>
                 </form>
             </div>
@@ -171,40 +171,55 @@
                     <label class for="email"></label>
                     <input class="text-field" type="email" id="email" size="30" placeholder="Email address" required>
                     <button class="form-btn" type="submit"><span class="button-text">GET STARTED</span><i
-                            class="footer-icon" data-feather="chevron-right"></i></button>
+                            class="footer-icon chevvy" data-feather="chevron-right"></i></button>
                 </div>
             </form>
         </div>
     </section>
-    
-        <footer class="footer-sign-up">
-            <div class="contacts">
-                <a class="link" href="">Questions?</a>
-                <a class="link" href="">ContactUs.</a>
+
+        <div class="story-footer-wrapper">
+            <div class="story-heading">
+                <a href="#">Questions?</a>
+                <a href="#">ContactUs.</a>
             </div>
-            <div class="footer-container">
-               <div class="content">
-                   <a class="link" href="">FAQ</a>
-                   <a class="link" href="">Cookie prefference</a>
-               </div>
-               <div class="content">
-                   <a class="link" href="">Help center</a>
-                    <a class="link" href="">cooperate information</a>
-               </div>
-               <div class="content">
-                   <a class="link" href="">Term of use</a>
-               </div>
-               <div class="content">
-                   <a class="link" href="">Privacy</a>  
-               </div>
-            </div>
-            <divn class="footer-button">
-                <button class="footer-btn" ><i class="footer-icon" data-feather="globe"></i>English<i class="footer-icon" data-feather="chevron-down"></i></button>
-            </div> 
-        </footer>
+            <footer class="story-footer">
+                <div class="story-lists">
+                     <ul>
+                        <a href="#/"><li>FAQ</li></a>
+                        <a href="#/"><li>Investor Relations</li></a>
+                        <a href="#/"><li>Privacy</li></a>
+                        <a href="#/"><li>Speed Test</li></a>
+                        <li><button class="story-footer-btn"><i class="footer-icon" data-feather="globe"></i>English<i class="footer-icon" data-feather="chevron-down"></i></button></li>
+                        <h5>Netflix Kenya</h5>
+                    </ul>
+                </div>
+                <div class="story-lists">
+                    <ul>
+                        <a href="#/"><li>Help Center</li></a>
+                        <a href="#/"><li>Jobs</li></a>
+                        <a href="#/"><li>Cookie Preferences</li></a>
+                        <a href="#/"><li>Legal Notice</li></a>
+                    </ul>
+                </div>
+                <div class="story-lists">
+                    <ul>
+                        <a href="#/"><li>Account</li></a>
+                        <a href="#/"><li>Ways to Watch</li></a>
+                        <a href="#/"><li>Corporate Information</li></a>
+                        <a href="#/"><li>Netflix originals</li></a>
+                    </ul>
+                </div>
+                <div class="story-lists">
+                    <ul>
+                        <a href="#/"><li>Terms of Use</li></a>
+                        <a href="#/"><li>Media Center</li></a>
+                        <a href="#/"><li>Contact Us</li></a>
+                    </ul>
+                </div>
+            </footer>
+        </div>
     <script>
         feather.replace()
     </script>
 </body>
-
 </html>
