--- a/sign-in.html
+++ b/sign-in.html
@@ -21,8 +21,7 @@
                 <h1 class="form-heading">Sign in</h1>
                 <div class="form-content">
                     <label class for="email"></label>
-                    <input class="input" type="email" id="email" size="30"
-                        placeholder="Email or Phone number" required>
+                    <input class="input" type="email" id="email" size="30" placeholder="Email or Phone number" required>
                 </div>
                 <div class="">
                     <label clas for="password"></label>
@@ -50,30 +49,32 @@
                 </div>
         </div>
         </form>
+
         <footer class="footer">
             <div class="contacts">
                 <a class="link" href="">Questions?</a>
                 <a class="link" href="">ContactUs.</a>
             </div>
             <div class="footer-container">
-               <div class="content">
-                   <a class="link" href="">FAQ</a>
-                   <a class="link" href="">Cookie prefference</a>
-               </div>
-               <div class="content">
-                   <a class="link" href="">Help center</a>
+                <div class="content">
+                    <a class="link" href="">FAQ</a>
+                    <a class="link" href="">Cookie prefference</a>
+                </div>
+                <div class="content">
+                    <a class="link" href="">Help center</a>
                     <a class="link" href="">cooperate information</a>
-               </div>
-               <div class="content">
-                   <a class="link" href="">Term of use</a>
-               </div>
-               <div class="content">
-                   <a class="link" href="">Privacy</a>  
-               </div>
+                </div>
+                <div class="content">
+                    <a class="link" href="">Term of use</a>
+                </div>
+                <div class="content">
+                    <a class="link" href="">Privacy</a>
+                </div>
             </div>
-            <divn class="footer-button">
-                <button class="footer-btn" ><i class="footer-icon" data-feather="globe"></i>English<i class="footer-icon" data-feather="chevron-down"></i></button>
-            </div> 
+            <div class="footer-button">
+                <button class="footer-btn"><i class="footer-icon" data-feather="globe"></i>English<i class="footer-icon"
+                        data-feather="chevron-down"></i></button>
+            </div>
         </footer>
     </div>
 
